kubernetes/applications/uptimekuma/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimekuma
  namespace: apps
spec:
  selector:
    matchLabels:
      app: uptimekuma
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: uptimekuma
    spec:
      containers:
        - name: uptimekuma
          image: louislam/uptime-kuma:2.0.2@sha256:4c364ef96aaddac7ec4c85f5e5f31c3394d35f631381ccbbf93f18fd26ac7cba
          volumeMounts:
            - name: config
              mountPath: /app/data
          resources:
            limits:
              cpu: 50m
              memory: 500Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: uptimekuma
