kubernetes/applications/uptimekuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: uptimekuma
