kubernetes/applications/uptimekuma/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptimekuma-route
  namespace: apps
spec:
  parentRefs:
  - name: traefik-gateway
    kind: Gateway
    namespace: traefik
  hostnames:
    - "uptime.local.ildoc.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uptimekuma
          port: 3001
